--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "cors": "^2.7.1",
     "express": "^4.13.4",
-    "express-jwt": "^3.3.0"
+    "express-jwt": "^3.3.0",
+    "mysql": "^2.10.2",
+    "sequelize": "^3.21.0",
+    "socket.io": "^1.4.5"
   }
 }
